--- a/manifest.yml
+++ b/manifest.yml
@@ -12,7 +12,7 @@ applications:
   - python_buildpack
   timeout: 180
   services:
-  - Cloudant
+  - Cloudant-SGI
   env:
     FLASK_APP : service:app
     FLASK_DEBUG : false
