--- a/manifest.yml
+++ b/manifest.yml
@@ -1,12 +1,12 @@
 ---
 # This manifest deploys a Python Flask application with a Cloudant database
 applications:
-  - name: lab-bluemix-cf-jj-123
+  - name: lab-bluemix-cf
     path: .
     instances: 2
     memory: 64M
     routes:
-      - route: lab-bluemix-cf-jj-123.eu-gb.cf.appdomain.cloud
+      - route: lab-bluemix-cf.eu-gb.cf.appdomain.cloud
     disk_quota: 1024M
     buildpacks:
       - python_buildpack
